--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,36 +7,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- This ConstraintLayout represents the contents of the screen  -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:tools="http://schemas.android.com/tools"
+    <!-- This LinearLayout represents the contents of the entire screen  -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:orientation="vertical" >
 
         <!-- The ActionBar displayed at the top -->
         <include
             layout="@layout/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-            
-        <!-- The main content view where fragments are loaded -->
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        <!-- This ConstraintLayout represents the contents of the screen  -->
+        <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/fragContainer"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity">
 
-            <ImageView
-                android:src="@drawable/swiiirl"
-                android:scaleType="centerCrop"
+            <!-- The main content view where fragments are loaded -->
+            <FrameLayout xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/fragContainer"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </FrameLayout>
+                android:layout_height="match_parent"
+                tools:context=".MainActivity">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:src="@drawable/swiiirl"
+                    android:scaleType="centerCrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </FrameLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <!-- The navigation drawer that comes from the left -->
     <!-- Note: `android:layout_gravity` needs to be set to 'start' -->
@@ -46,6 +52,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@android:color/white"
+        app:headerLayout="@layout/nav_header"
         app:menu="@menu/drawer_view" />
         
 </androidx.drawerlayout.widget.DrawerLayout>
