--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -5,15 +5,15 @@
         <item
             android:id="@+id/nav_location_fragment_1"
             android:icon="@drawable/ic_outline_push_pin_24"
-            android:title="King County, Washington" />
+            android:title="@string/store_location" />
         <item
             android:id="@+id/nav_location_fragment_2"
             android:icon="@drawable/ic_outline_push_pin_24"
-            android:title="TODO" />
+            android:title="@string/store_location" />
         <item
             android:id="@+id/nav_location_fragment_3"
             android:icon="@drawable/ic_outline_push_pin_24"
-            android:title="TODO" />
+            android:title="@string/store_location" />
 
     </group>
 
