--- a/app/src/main/res/layout/fragment_risk_detail.xml
+++ b/app/src/main/res/layout/fragment_risk_detail.xml
@@ -1,87 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/risk_detail_frag"
-    android:background="@color/colorPrimaryLight"
-    android:layout_margin="10dp"
-    tools:context=".RiskDetailPageFragment">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/fullscreen_content_controls"
+    <androidx.core.widget.NestedScrollView
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:ignore="UselessParent">
+        android:id="@+id/risk_detail_frag"
+        android:background="@color/colorPrimaryLight"
+        android:layout_margin="10dp"
+        tools:context=".RiskDetailPageFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            android:id="@+id/fullscreen_content_controls"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:ignore="UselessParent">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/currentCasesCardView"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="40dp"
-                app:cardBackgroundColor="@color/cardBackground"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="4dp"
-                app:barrierMargin="@dimen/text_margin"
-                android:layout_margin="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="match_parent">
 
-                <include layout="@layout/current_cases_detail"/>
+                <ImageButton
+                    android:id="@+id/select_location_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_edit_location"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:translationZ="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:elevation="20dp"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/currentCasesCardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="40dp"
+                    app:cardBackgroundColor="@color/cardBackground"
+                    app:cardCornerRadius="10dp"
+                    app:barrierMargin="@dimen/text_margin"
+                    android:translationZ="0dp"
+                    android:layout_margin="10dp"
+                    android:elevation="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/totalPopsCardView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="40dp"
-                android:layout_margin="10dp"
-                app:cardBackgroundColor="@color/cardBackground"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="4dp"
-                app:barrierMargin="@dimen/text_margin"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/currentCasesCardView">
+                    <include layout="@layout/current_cases_detail"/>
 
-                <include layout="@layout/total_pops_detail"/>
+                </androidx.cardview.widget.CardView>
 
-            </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/totalPopsCardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="40dp"
+                    android:layout_margin="10dp"
+                    app:cardBackgroundColor="@color/cardBackground"
+                    app:cardCornerRadius="10dp"
+                    android:elevation="10dp"
+                    app:barrierMargin="@dimen/text_margin"
+                    android:translationZ="0dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/currentCasesCardView">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/riskDisplayCardView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="40dp"
-                android:layout_margin="10dp"
-                app:cardBackgroundColor="@color/cardBackground"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="4dp"
-                app:barrierMargin="@dimen/text_margin"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/totalPopsCardView">
+                    <include layout="@layout/total_pops_detail"/>
 
-                <include layout="@layout/risk_detail"/>
+                </androidx.cardview.widget.CardView>
 
-            </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/riskDisplayCardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="40dp"
+                    android:layout_margin="10dp"
+                    app:cardBackgroundColor="@color/cardBackground"
+                    app:cardCornerRadius="10dp"
+                    android:elevation="10dp"
+                    app:barrierMargin="@dimen/text_margin"
+                    android:translationZ="0dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/totalPopsCardView">
 
-            <Button
-                android:id="@+id/select_location_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/select_location"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                app:layout_constraintTop_toBottomOf="@id/riskDisplayCardView" />
+                    <include layout="@layout/risk_detail"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+    <TextView
+        android:id="@+id/lastUpdatedTextView"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:textSize="@dimen/std_text_size"
+        android:background="@color/colorAccentLight"
+        android:paddingVertical="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"/>
+
+</RelativeLayout>
