--- a/app/src/main/res/layout/fragment_risk_detail.xml
+++ b/app/src/main/res/layout/fragment_risk_detail.xml
@@ -85,6 +85,7 @@
                     android:elevation="10dp"
                     app:barrierMargin="@dimen/text_margin"
                     android:translationZ="0dp"
+                    android:layout_marginBottom="40dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/totalPopsCardView">
 
