successfully running APIs if internet access, displaying message if not

--- a/app/src/main/res/layout/fragment_risk_detail.xml
+++ b/app/src/main/res/layout/fragment_risk_detail.xml
@@ -105,7 +105,7 @@
         android:layout_width="match_parent"
         android:textSize="@dimen/std_text_size"
         android:background="@color/colorAccentLight"
-        android:paddingVertical="8dp"
+        android:padding="8dp"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"/>
 
