--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -5,14 +5,17 @@
         <item
             android:id="@+id/nav_location_fragment_1"
             android:icon="@drawable/ic_outline_push_pin_24"
+            android:visible="false"
             android:title="@string/store_location" />
         <item
             android:id="@+id/nav_location_fragment_2"
             android:icon="@drawable/ic_outline_push_pin_24"
+            android:visible="false"
             android:title="@string/store_location" />
         <item
             android:id="@+id/nav_location_fragment_3"
             android:icon="@drawable/ic_outline_push_pin_24"
+            android:visible="false"
             android:title="@string/store_location" />
 
     </group>
